[gd_scene load_steps=8 format=2]

[ext_resource path="res://owl/feather.gd" type="Script" id=1]
[ext_resource path="res://owl/feather.tres" type="SpriteFrames" id=2]
[ext_resource path="res://particles.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=8]
radius = 3.66664
height = 16.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 2.99997
height = 14.6667

[sub_resource type="CanvasItemMaterial" id=7]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.5
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 87.33
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
angular_velocity = 160.0
angular_velocity_random = 0.94
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -10.0
radial_accel = 0.01
angle = 940.2
angle_random = 1.0
scale = 3.0
anim_offset = 1.0
anim_offset_random = 1.0

[node name="projectile" type="KinematicBody2D" groups=["enemy", "feather", "proj"]]
scale = Vector2( 3, 3 )
collision_layer = 6
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="." groups=["proj"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, 0 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 7 )
amount = 6
lifetime = 2.0
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="Particles2D2" type="Particles2D" parent="."]
material = SubResource( 7 )
emitting = false
amount = 6
lifetime = 2.0
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 0.5 )
frames = ExtResource( 2 )
animation = "cor"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
